Adding most.. things

--- a/index.html
+++ b/index.html
@@ -14,21 +14,18 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container game">
         <div class="jumbotron titleBox">
             <div class="container">
                 <h1 class="display-4">Rock, Paper, Scissors!</h1>
                 <br>
-                <p class="lead players-connected">Players connected: </p>
+                <p class="lead players-connected">Players connected: -</p>
             </div>
         </div>
-        <div class="jumbotron titleBox">
-            <div class="container">
-                <h4>RPS Chat</h4>
-            </div>
-        </div>
+    <!-- buttons here -->
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>\
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
 
